# stock-sentiment-analysis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  MIGRATION.md  Makefile  QUICKSTART.md  README.md  README_NEW.md  README_OLD.md  SUMMARY.md  app.py  docker-compose.yml  main.py  main_legacy.py  pyproject.toml  requirements-dev.txt  requirements.txt  secret_file  settings.py  settings_legacy.py  setup.cfg
.agent/: config.json  instructions.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  health.py  sentiment.py
app/core/: __init__.py  config.py  logging.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  news.py  sentiment.py
stock_sentiment/: __init__.py  __main__.py  cache.py  cli.py  env.py  errors.py  google_rss.py  http.py  newsapi.py  openai_client.py  sentiment.py  types.py
templates/: dashboard.html  index.html  portfolio.html
tests/: conftest.py  test_api.py  test_cache.py  test_cache_and_analysis.py  test_cli.py  test_env.py  test_google_rss.py  test_http.py  test_news.py  test_newsapi.py  test_openai_client.py  test_sentiment.py  test_sentiment_summary.py
